examples/test/testpolicy19831.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19831
  namespace: namespace271
spec:
  podSelector:
    matchLabels:
      key16: value35
      key12: value3
      key48: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value13
          key44: value6
          key47: value14
